syntax = "proto2";
package org.acme.deals;
import "kogito-index.proto";
import "kogito-types.proto";
option kogito_model = "Deals";
option kogito_id = "deals";

/* @Indexed */
message Address {
    option java_package = "org.acme.travels";
    /* @Field(store = Store.YES) */
    optional string city = 1;
    /* @Field(store = Store.YES) */
    optional string country = 2;
    /* @Field(store = Store.YES) */
    optional string street = 3;
    /* @Field(store = Store.YES) */
    optional string zipCode = 4;
}

/* @Indexed */
message Deals {
    option java_package = "org.acme.deals";
    /* @Field(store = Store.YES) */
    optional string id = 1;
    /* @Field(store = Store.YES) */
    optional string name = 2;
    /* @Field(store = Store.YES) */
    optional string review = 3;
    optional Traveller traveller = 4;
    /* @Field(store = Store.YES) */
    optional org.kie.kogito.index.model.KogitoMetadata metadata = 5;
}

/* @Indexed */
message Traveller {
    option java_package = "org.acme.travels";
    optional Address address = 1;
    /* @Field(store = Store.YES) */
    optional string email = 2;
    /* @Field(store = Store.YES) */
    optional string firstName = 3;
    /* @Field(store = Store.YES) */
    optional string lastName = 4;
    /* @Field(store = Store.YES) */
    optional string nationality = 5;
}